# Deep-Reinforcement-Learning-in-Mobile-Robots

./: README.md
turtlebot3_nav/: package.xml  readme.txt
turtlebot3_nav/launch/: dqn_test_stage_1.launch  dqn_test_stage_2.launch  dqn_train_stage_1.launch  dqn_train_stage_2.launch  result_graph.launch  stage_1.launch  stage_2.launch
turtlebot3_nav/src/: dqn_agent.py  dqn_agent_test.py  moving_obstacle  respawnGoal.py
turtlebot3_nav/worlds/: stage_1.world  stage_2.world
