<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_nav</name>
  <version>0.0.0</version>
  <description>The turtlebot3_nav package</description>
  <maintainer email="hp@todo.todo">hp</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>
